--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/plugin-help": "^3.2.3",
     "@rdalogic/ping": "^1.1.0",
     "archiver": "^5.3.0",
+    "axios": "^0.21.4",
     "chalk": "^4.1.2",
     "copy-template-dir": "^1.4.0",
     "debug": "^4.3.2",
