--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.1.1
       - name: node
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@2
         with:
-          node-version: 12
+          node-version: "14"
       - run: npm ci
       - run: npm publish
         env:
