--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,12 +13,10 @@ jobs:
     name: publish
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2.1.1
-      - name: node
-        uses: actions/setup-node@2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: '14'
       - run: npm ci
       - run: npm publish
         env:
