--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: NPM Publish
-        run: npm publish
+        run: |
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+          npm publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
