--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
     "listr": "^0.14.3",
-    "tslib": "^1.14.1"
+    "tslib": "^1.14.1",
+    "ansi-regex": ">=6.0.1",
+    "set-value": ">=4.0.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
