--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,10 @@ jobs:
           node-version: '14'
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
       - name: NPM Publish
         run: |
           npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-          npm publish --ignore-scripts
+          npm publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
