--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.3",
     "@rdalogic/ping": "^1.1.0",
+    "ansi-regex": ">=6.0.1",
     "archiver": "^5.3.0",
     "axios": "^0.21.4",
     "chalk": "^4.1.2",
@@ -24,9 +25,9 @@
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
     "listr": "^0.14.3",
-    "tslib": "^1.14.1",
-    "ansi-regex": ">=6.0.1",
-    "set-value": ">=4.0.1"
+    "oclif": "^2.2.0",
+    "set-value": ">=4.0.1",
+    "tslib": "^1.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
